<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="menu_map">Map</string>
    <string name="menu_list">List</string>
    <string name="dialog_permission_title">Permission to access location is needed for the app to work.</string>
    <string name="dialog_permission_previous_denied">You previously denied location permission. Click ok to open settings to enable it.</string>
    <string name="dialog_permission_required">Permission required</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_exit">EXIT</string>
    <string name="menu_search">Search</string>
    <string name="menu_add">Add</string>
    <string-array name="property_type_array">
        <item>Apartment</item>
        <item>House</item>
        <item>Studio</item>
    </string-array>
    <string name="fragment_add_hobbies">Hobbies</string>
    <string name="fragment_add_doctor">Doctor</string>
    <string name="fragment_add_public_transport">Public transport</string>
    <string name="fragment_add_stores">Stores</string>
    <string name="fragment_add_park">Park</string>
    <string name="fragment_add_school">School</string>
    <string name="fragment_add_add_photo">Add Photo</string>
    <string name="fragment_add_street">Street</string>
    <string name="fragment_add_describe_the_property">Describe property</string>
    <string name="fragment_add_number_of_rooms">Number of Rooms</string>
    <string name="fragment_add_surface_m2">Surface in m2</string>
    <string name="fragment_add_price">Price</string>
    <string name="fragment_add_property_type">Type of the property</string>
    <string name="fragment_add_intrests_points">Intrest Points</string>
    <string name="fragment_add_city">City</string>
    <string name="fragment_add_postal_code">Postal Code</string>
    <string name="fragment_add_location">Location</string>
    <string name="fragment_add_number">Number</string>
    <string name="fragment_add_name_of_agent">Agents name</string>
    <string name="fragment_add_add_property">Add property</string>
    <string name="error_missing_info">Missing Info</string>
    <string name="menu_edit">Edit</string>
    <string name="details_type">Type</string>
    <string name="details_agent_name">Agent Name</string>
    <string name="details_surface">Surface</string>
    <string name="details_rooms">Number Of Rooms</string>
    <string name="details_price">Price</string>
    <string name="details_description">Description</string>
    <string name="details_address">Address</string>
    <string name="details_photos">Photos</string>
    <string name="error_something_wrong">Something went please try again</string>
    <string name="update_property">Update Property</string>
    <string name="error_no_photo">You Should Pick At Least One Photo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="details_published_date">Published Date</string>
    <string name="error_something_wrong_address">Did you enter correct address?</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="sold">Show only sold</string>
    <string name="city">City</string>
    <string name="number_of_photos_minimum">Minimal number of Photos</string>
    <string name="minMaxArea">Set minimal surface</string>
    <string name="date_published">Date published</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="from">From</string>
    <string name="Until">Until</string>
    <string name="details_sold_date">Sold Date</string>
    <string name="details_mark_as_sold">Mark as sold</string>
    <string name="error_no_results">No search results</string>
    <string name="menu_logout">Logout</string>
    <string-array name="property_min_photos_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="dialog_logout_title">Are you sure you want to logout?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_done">Done</string>
    <string name="no_photo_title">Please set the photo title</string>
    <string name="notification_title">Listing successfully added</string>
    <string name="channel_id">Real estate notifier</string>
    <string name="channel_name">Notifier</string>
    <string name="channel_description">Tells you when you update or add new listing</string>
    <string name="notification_title_update">Listing succesfully updated</string>
    <string name="dialog_photo">Pick Your image</string>
    <string name="loan_menu">Canculate your loan</string>
    <string name="loan_in_total">In total you will pay</string>
    <string name="loan_per_month">Per month you will pay</string>
    <string name="loan_amount_to_get">Amount you would like to get</string>
    <string name="loan_interest_rate">Interest rate</string>
    <string name="interest_no_data">Please enter all needed data</string>
    <plurals name="interest_rate_years">
        <item quantity="one">%d year</item>
        <item quantity="other">%d years</item>
    </plurals>

</resources>
