<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_type"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/typeSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:entries="@array/property_type_array"
            android:dropDownWidth="match_parent"
            android:spinnerMode="dropdown"
            app:layout_constraintBottom_toBottomOf="@+id/tvType"
            app:layout_constraintStart_toEndOf="@+id/tvType"
            app:layout_constraintTop_toTopOf="@+id/tvType" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_add_surface_m2"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvType" />

        <TextView
            android:id="@+id/tvMinSurface"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/min"
            app:layout_constraintBottom_toBottomOf="@+id/etSurfaceMin"
            app:layout_constraintEnd_toStartOf="@+id/etSurfaceMin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etSurfaceMin" />

        <EditText
            android:id="@+id/etSurfaceMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvSurfaceMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvMinSurface"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <EditText
            android:id="@+id/etSurfaceMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvSurfaceMax"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/tvSurfaceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/max"
            app:layout_constraintBottom_toBottomOf="@+id/etSurfaceMax"
            app:layout_constraintEnd_toStartOf="@+id/etSurfaceMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etSurfaceMin"
            app:layout_constraintTop_toTopOf="@+id/etSurfaceMax" />

        <TextView
            android:id="@+id/tvInterestPoints"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_add_intrests_points"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_surface_search_textView" />

        <CheckBox
            android:id="@+id/rbSchool"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_add_school"
            app:layout_constraintEnd_toStartOf="@+id/rbTransport"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvInterestPoints" />

        <CheckBox
            android:id="@+id/rbTransport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fragment_add_public_transport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rbSchool"
            app:layout_constraintTop_toBottomOf="@+id/tvInterestPoints" />

        <CheckBox
            android:id="@+id/rbDoctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_add_doctor"
            app:layout_constraintStart_toStartOf="@+id/rbTransport"
            app:layout_constraintTop_toBottomOf="@+id/rbTransport" />

        <CheckBox
            android:id="@+id/rbPark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_add_park"
            app:layout_constraintStart_toStartOf="@+id/rbSchool"
            app:layout_constraintTop_toBottomOf="@+id/rbSchool" />

        <CheckBox
            android:id="@+id/rbStores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_add_stores"
            app:layout_constraintStart_toStartOf="@+id/rbPark"
            app:layout_constraintTop_toBottomOf="@+id/rbPark" />

        <CheckBox
            android:id="@+id/rbHobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/fragment_add_hobbies"
            app:layout_constraintStart_toStartOf="@+id/rbTransport"
            app:layout_constraintTop_toBottomOf="@+id/rbDoctor" />

        <TextView
            android:id="@+id/tvDatePublished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/date_published"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbStores" />

        <TextView
            android:id="@+id/tvPublishedFrom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/from"
            app:layout_constraintBottom_toBottomOf="@+id/etMinDate"
            app:layout_constraintEnd_toStartOf="@+id/etMinDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etMinDate" />

        <EditText
            android:id="@+id/etMinDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:hint="@string/date_format"
            app:layout_constraintEnd_toStartOf="@+id/tvPublishedUntil"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPublishedFrom"
            app:layout_constraintTop_toBottomOf="@+id/tvDatePublished" />

        <TextView
            android:id="@+id/tvPublishedUntil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/Until"
            app:layout_constraintBottom_toBottomOf="@+id/etMaxDate"
            app:layout_constraintEnd_toStartOf="@+id/etMaxDate"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etMinDate"
            app:layout_constraintTop_toTopOf="@+id/etMaxDate" />

        <EditText
            android:id="@+id/etMaxDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:focusable="false"
            android:layout_marginEnd="16dp"
            android:hint="@string/date_format"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPublishedUntil"
            app:layout_constraintTop_toBottomOf="@+id/tvDatePublished" />

        <CheckBox
            android:id="@+id/rbIncludeSold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/sold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etMinDate" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rbIncludeSold" />

        <Spinner
            android:id="@+id/spinnerPhotos"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:entries="@array/property_min_photos_array"
            android:dropDownWidth="50dp"
            app:layout_constraintStart_toEndOf="@+id/tvMinimalPhotos"
            app:layout_constraintTop_toTopOf="@+id/tvMinimalPhotos" />

        <TextView
            android:id="@+id/tvMinimalPhotos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/number_of_photos_minimum"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etCity" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/details_price"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvMinimalPhotos" />

        <EditText
            android:id="@+id/etPriceMin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toStartOf="@+id/tvPriceMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPriceMin"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <TextView
            android:id="@+id/tvPriceMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/min"
            app:layout_constraintBottom_toBottomOf="@+id/etPriceMin"
            app:layout_constraintEnd_toStartOf="@+id/etPriceMin"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPriceMin" />

        <TextView
            android:id="@+id/tvPriceMax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/max"
            app:layout_constraintBottom_toBottomOf="@+id/etPriceMax"
            app:layout_constraintEnd_toStartOf="@+id/etPriceMax"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/etPriceMin"
            app:layout_constraintTop_toTopOf="@+id/etPriceMax" />

        <EditText
            android:id="@+id/etPriceMax"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvPriceMax"
            app:layout_constraintTop_toBottomOf="@+id/tvPrice" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSearch"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/menu_search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriceMax" />

        <TextView
            android:id="@+id/error_surface_search_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/minMaxArea"
            android:textSize="12sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/etSurfaceMax"
            app:layout_constraintStart_toStartOf="@+id/etSurfaceMin"
            app:layout_constraintTop_toBottomOf="@+id/etSurfaceMin" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
